--- a/HomeRefrigeratorManagement/Info.plist
+++ b/HomeRefrigeratorManagement/Info.plist
@@ -26,6 +26,7 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>location</string>
 		<string>remote-notification</string>
 	</array>
 </dict>
